--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-NEO4J_URI=bolt://localhost:7687
+NEO4J_URI=bolt://neo4j:7687
 NEO4J_USER=simpsons
 NEO4J_PASSWORD=simpsons-data
 GRAPHQL_LISTEN_PORT=4001
