--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 
 services:
-
   neo4j:
     build: ./neo4j
     ports:
@@ -20,7 +19,7 @@ services:
     environment:
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=ociteb
+      - NEO4J_PASSWORD=test
       - GRAPHQL_LISTEN_PORT=4001
       - GRAPHQL_URI=http://api:4001/graphql
 
@@ -36,6 +35,9 @@ services:
     environment:
       - APP_GRAPHQL_URI=/graphql
       - PROXY=http://api:4001/graphql
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=test
     links:
       - api
     depends_on:
