--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "./node_modules/.bin/nodemon --watch src --ext js,graphql --exec babel-node  src/index.js",
     "build": "babel src -d build; cp .env build; cp src/schema.graphql build",
-    "start": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js",
+    "seed-db": "./node_modules/.bin/babel-node src/data/seed-db.js"
   },
   "husky": {
     "hooks": {
